BAP-17054: Code review - remove old less files - resolve conflict after back merge - fix vertical align of login form

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/mobile/button.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/mobile/button.scss
@@ -7,5 +7,5 @@
   font-size: 14px;
   line-height: 38px;
   height: 40px;
-  border-radius: @baseBtnBorderRadius + 4px;
+  border-radius: $baseBtnBorderRadius + 4px;
 }
