--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/mobile/login.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/mobile/login.scss
@@ -66,7 +66,7 @@
     & + input[type="text"],
     & + input[type="email"],
     & + input[type="password"] {
-      width: calc(~'100% - 24px');
+      width: calc(100% - 24px);
     }
     & + select {
       width: 174px;
